--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -42,8 +42,11 @@ vars:
   start_date: '1999-01-01'
   test: 'false' # to trigger runs for unit testing - override in a CLI param in testing job
   fct_order_items: 'mock_source__fct_order_items' # this is a map for unit testing
-  vars:
   'dbt_date:time_zone': 'America/Los_Angeles'
+  config1:
+    name: "test1"
+    start_date: "01-01-2023"
+
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
