--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -65,20 +65,16 @@ models:
     # my staging models/staging folder
     staging:
       +materialized: view
-      +schema: staging
+      +database: "{{ 'DEV_STAGING' if env_var('DBT_ENV_NAME') == 'DEV' else 'TST_STAGING' if env_var('DBT_ENV_NAME') == 'TST' else 'PRD_STAGING' if env_var('DBT_ENV_NAME') == 'PRD' else none   }}"
+
+
+    intermediate:
+      +materialized: table
+      +database: "{{ env_var('DBT_ENV_NAME') ~ '_INTERMEDIATE'  }}"
+      
 
     marts:
-      core:
-        +materialized: table
-        +schema: core_analytics
-      aggregates:
-        +materialized: table
-        +schema: aggregate_tables
+      +materialized: table
+      +database: "{{ 'DEV_MARTS' if env_var('DBT_ENV_NAME') == 'DEV' else 'TST_MARTS' if env_var('DBT_ENV_NAME') == 'TST' else 'PRD_MARTS' if env_var('DBT_ENV_NAME') == 'PRD' else none   }}"
 
-    
-seeds:
-  tpch:
-    snowflake_contract_rates:
-      +column_types:
-        effective_date: DATE
-        rate: NUMBER   
+
