--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -66,6 +66,7 @@ models:
     staging:
       +materialized: view
       +schema: staging
+      +database: "{{ 'DEV_STAGING' if env_var('DBT_ENV_NAME') == "DEV' else 'TST_STAGING' if env_var('DBT_ENV_NAME') == 'TST' else 'PRD_STAGING' if env_var('DBT_ENV_NAME') == 'PRD' else none }}"
 
     marts:
       core:
