--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -60,7 +60,7 @@ models:
     staging:
       +materialized: view
       +schema: staging
-      +database: "{{ 'DEV_STAGING' if env_var('DBT_ENV_NAME') == 'DEV' else 'TST_STAGING' if env_var('DBT_ENV_NAME') == 'TST' else 'PRD_STAGING' if env_var('DBT_ENV_NAME') == 'PRD' else none }}"
+      +database: "{{ 'STEVE_D_SANDBOX' if env_var('DBT_ENV_NAME') == 'DEV' else 'STEVE_D_SANDBOX' if env_var('DBT_ENV_NAME') == 'TST' else 'STEVE_D_SANDBOX' if env_var('DBT_ENV_NAME') == 'PRD' else none }}"
 
     marts:
       core:
